Clean up smells